Add compatibility for Java 8